--- a/css/timelineStyle.css
+++ b/css/timelineStyle.css
@@ -12,11 +12,10 @@ body {
 .vis.timeline.root {
   border: none;
 
-  background: #3e647e url(timeline/background-moche.png); /* blue2 */
-  background: #e1953f url(timeline/background-moche.png); /* orange */
-  background: #422a6c url(timeline/background-moche.png); /* purple */
-
-  background: #3145B1 url(timeline/background-moche.png); /* blue */
+  background: #3e647e url(../img/background-moche.png); /* blue2 */
+  background: #e1953f url(../img/background-moche.png); /* orange */
+  background: #422a6c url(../img/background-moche.png); /* purple */
+  background: #3145B1 url(../img/background-moche.png); /* blue */
 }
 
 
